Fix timer spacing

--- a/csxxx/src/App.scss
+++ b/csxxx/src/App.scss
@@ -225,7 +225,7 @@ $secondary-grey: #B7B6BD;
   color: $primary-grey;
   display: flex;
   flex-direction: row;
-  padding-bottom: 8pt;
+  margin: 32px 0px;
 }
 
 .body__countdown-container__current-time {
